[gd_scene load_steps=2 format=3 uid="uid://cc3o5qoidlgfj"]

[ext_resource type="Script" path="res://scenes_and_scripts/level_or_world_select_screens/world_1_level_select_screen.gd" id="1_a2jne"]

[node name="World1LevelSelectScreen" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a2jne")

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "World 1"
horizontal_alignment = 1

[node name="Level1Button" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Level 1"

[node name="Level2Button" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Level 2"

[node name="BackButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "‚Üê Back"

[connection signal="pressed" from="Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
